<resources>
    <string name="app_name">home_work_2_calculator</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_dot">.</string>
    <string name="AC">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="procent">%</string>
    <string name="delenie">/</string>
    <string name="ymnogenie">X</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="ravno">=</string>
    <string name="text_view">текст</string>
</resources>