<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cat"/>

    <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="220dp"
            android:hint="@string/text_view"
            android:textSize="24sp"/>

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="4"
            android:layout_marginTop="120dp"
            android:layout_marginStart="10dp">


        <Button
                android:id="@+id/button_AC"
                android:text="@string/AC"
                style="@style/calc_button"
                android:theme="@style/calc_button"/>
        <Button
                android:id="@+id/button_plus_minus"
                android:text="@string/plus_minus"
                style="@style/calc_button"
                android:theme="@style/calc_button"/>
        <Button
                android:id="@+id/procent"
                android:text="@string/procent"
                style="@style/calc_button"
                android:theme="@style/calc_button"/>
        <Button
                android:id="@+id/button_delenie"
                android:text="@string/delenie"
                style="@style/calc_button"
                android:theme="@style/calc_button"/>
        <Button
                android:text="@string/button7"
                android:id="@+id/button7"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:text="@string/button8"
                android:id="@+id/button8"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:text="@string/button9"
                android:id="@+id/button9"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:id="@+id/button_ymnogenie"
                android:text="@string/ymnogenie"
                style="@style/calc_button"
                android:theme="@style/calc_button"/>
        <Button
                android:text="@string/button4"
                android:id="@+id/button4"
                style="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:text="@string/button5"
                android:id="@+id/button5"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:text="@string/button6"
                android:id="@+id/button6"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:id="@+id/button_minus"
                android:text="@string/minus"
                style="@style/calc_button"
                android:theme="@style/calc_button"/>
        <Button
                android:text="@string/button1"
                android:id="@+id/button1"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:text="@string/button2"
                android:id="@+id/button2"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:text="@string/button3"
                android:id="@+id/button3"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:id="@+id/button_plus"
                android:text="@string/plus"
                style="@style/calc_button"
                android:theme="@style/calc_button"/>
        <Button
                android:text="@string/button0"
                android:id="@+id/button0"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:text="@string/button_dot"
                android:id="@+id/button_dot"
                style="@style/calc_button"
                android:theme="@style/calc_button"
                android:onClick="onClick"/>
        <Button
                android:id="@+id/button_ravno"
                android:text="@string/ravno"
                style="@style/calc_button"
                android:theme="@style/calc_button"/>

    </GridLayout>

</FrameLayout>
